@@ -2,6 +2,7 @@
     o legend: fix when number of levels in aes var higher that represented levels
     o subjectProfile[Interval|Line|Event]Plot: alpha parameter
     o createSubjectProfileReport: suppress warnings Sweave
+    o prepareSubjectProfile: remove message: 'scale already present'
 0.9.2
     o createSubjectProfileReport: set knitr environment (to be used within rmd doc)
     o export convertAesVar
